<resources>
    <string name="app_name">Hockey Pick \'Em</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="today">Today</string>
    <string name="thumbnail">Test thumb</string>
    <string name="title_activity_standings">Standings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_stats">Stats</string>
    <string name="no_game_data">There is no game data available for this date.</string>

    <!-- Strings related to Standings page -->
    <string name="metroDiv">Metropolitan</string>
    <string name="atlanticDiv">Atlantic</string>
    <string name="centralDiv">Central</string>
    <string name="pacificDiv">Pacific</string>
    <string name="wildCard">Wild Card</string>
    <string name="noPlayoffs">No Playoffs</string>
    <string name="easternConf">Eastern Conference</string>
    <string name="westernConf">Western Conference</string>
    <string name="nationalLeague">National Hockey League</string>
    <string name="gp">GP</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="ot">OT</string>
    <string name="pts">PTS</string>

    <!-- Strings related to Stats page -->
    <string name="totalPicks">Total picks:</string>
    <string name="correctPicks">Correct picks:</string>
    <string name="correctPercentage">Correct percentage:</string>

    <!-- Strings related to About page -->
    <string name="dev_email">feedthewolfdev@gmail.com</string>
    <string name="feedback_call_out">Have a suggestion for the app? Found a bug? Just want to say hello? Please feel free to leave feedback!</string>
    <string name="feedback_button">Send Feedback</string>
    <string name="send_feedback_title">Send a feedback email via:</string>
    <string name="send_feedback_email_subject">Hockey Pick \'Em Feedback</string>
    <string name="send_feedback_email_body">Hello developer!\n\nHere\'s some feedback that I have for your app:\n</string>

    <string name="about_the_app">Hockey Pick \'Em is developed and maintained by <i>Feed The Wolf</i>, a casual Android developer and passionate hockey fan.</string>
    <string name="trademark_disclosure">This app is not endorsed by or affiliated with the National Hockey League. Any trademarks used in the app are done so under fair use with the sole purpose of identifying the respective entities and remain the property of their respective owners.</string>

    <!-- Strings related to Settings -->

    <!-- Strings related to preferences -->
    <string name="preference_file_key">com.feedthewolf.nhlpickem.PREFERENCE_FILE_KEY</string>
    <string name="preference_today_date">todayDate</string>
    <string name="preference_has_pick_reminder_been_sent_today">hasRemindedToday</string>
    <string name="preference_are_there_games_today">gamesToday</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_reminder_notifications">Pick reminders</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pick_reminder_notification_title">Make your hockey picks</string>

    <!-- TODO: remove this placeholder text -->
    <string name="pick_reminder_notification_text">Be sure to get your picks in for today\'s games!
    </string>
    <string name="wildCardTab">Wildcard</string>
    <string name="division">Division</string>
    <string name="conference">Conf</string>
    <string name="league">League</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
