<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshStats"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.feedthewolf.nhlpickem.StatsActivity">

        <RelativeLayout
            android:id="@+id/totalPicksLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/background_border_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalPicksDescriptionTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/totalPicks" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalPicksNumberTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:text="Total Picks Num" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/correctPicksLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/background_border_middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/correctPicksDescriptionTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/correctPicks" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/correctPicksNumberTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:text="Correct Picks Num" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/correctPercentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/background_border_bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/correctPercentDescriptionTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/correctPercentage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/correctPercentNumberTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:text="Correct Percent Num" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameIdsWithNoneAsResultTextView"
            tools:text="game ids with none as result" />

    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>

